--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,4 +1,3 @@
-/* Reset de estilos */
 * {
     margin: 0;
     padding: 0;
@@ -7,33 +6,21 @@
     text-decoration: none;
 }
 
-a {
-    color: #FFF;
-}
+a {color: #FFF;}
 
-img {
-    max-width: 100%;
-}
+img{max-width: 100%;}
 
-p {
-    font-size: 1.2em;
-    line-height: 1.4em;
-    color: #141A28;
-}
+p {font-size: 1.2em; line-height: 1.4em; color: #141A28;}
 
-h2 {
-    color: #141A28;
-}
+h2 {color: #141A28;}
 
 .container {
-    width: 100%;
-    max-width: 960px;
+    width: 960px;
     margin: 0 auto;
     padding: 15px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 html, body {
@@ -49,8 +36,7 @@ body {
 
 header {
     width: 100%;
-    background-color: #4B0082;
-    padding: 15px 0;
+    background-color: #141A28;
 }
 
 .branch, .branch img {
@@ -58,88 +44,125 @@ header {
     border-radius: 50%;
 }
 
-.menu ul {
+.menu ul { 
     display: flex;
-    justify-content: center;
-    gap: 15px;
+    justify-content: space-between;
 }
 
 .menu .menu-link {
     display: block;
+    margin: 10px;
     padding: 10px;
     color: #E9F3FE;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: .15em;
-    transition: opacity .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
-.menu .menu-link:hover {
-    opacity: .75;
+.menu .menu-link:hover {opacity: .75;}
+
+
+main {width: 100%;}
+
+.super-card {
+    width: 100%;
+    display: flex;
+    margin-top: 20px;
 }
+
+.super-card-img, 
+.super-card-img img {
+    width: 800px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.super-card-img h2 {margin-top: 20px;}
+
+.super-card-text {margin-left: 40px;}
+
+.super-card-text p + p {margin-top: 1em;}
+
 
 .card {
-    width: 100%;
-    max-width: 400px;
+    max-width: 350px;
     min-height: 500px;
-    border-radius: 10px;
+    border-radius: 3px;
+    margin: 1em;
     background-color: #FFF;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-    transition: transform 0.3s ease-in-out;
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, .15);
+    transition: all .3s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.card:hover {
-    transform: scale(1.05);
+.card:hover { box-shadow: 30px 30px 5px 0px rgba(0, 0, 0, .15); }
+
+.card-img { padding: 1em; }
+
+.img-body,
+.img-body img {
+    width: 200px;
+    display: table;
+    margin: 0 auto; 
+    border-radius: 50%;
 }
 
-.card-img {
-    padding: 1em;
-    display: flex;
-    justify-content: center;
+.card-body { padding: 1em; }
+.card-body p {
+    color: #343A40;
+    line-height: 1.4em;
 }
 
-.card-img img {
-    width: 100%;
-    height: auto;
-    max-width: 350px;
-    border-radius: 10px;
-}
-
-.card-body {
-    padding: 1em;
-    text-align: center;
-}
-
-.card-body p + p {
-    margin-top: .5em;
-}
+.card-body p + p { margin-top: .5em;}
 
 .card-button {
     width: 100%;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
     padding: 1em;
     background-color: #141A28;
     display: flex;
     justify-content: center;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
 }
 
 .card-button button {
     width: 250px;
     padding: 1em;
     border: none;
-    border-radius: 5px;
+    border-radius: 3px;
     background-image: linear-gradient(to right bottom, #412e82, #393581, #333b7e, #2f407a, #2f4475);
     color: #E9F3FE;
     font-size: 1.2em;
     text-transform: capitalize;
-    transition: opacity 0.3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 .card-button button:hover {
     cursor: pointer;
-    opacity: 0.75;
+    opacity: .75;
+}
+
+.sub-title {margin: 20px auto;}
+
+.li-ornament { margin: 10px 0; }
+
+.li-ornament::before {
+    content: "";
+    display: inline-block;
+    width: 4px;
+    height: 12px;
+    margin-right: 10px;
+    background-color: #141A28;
+    border-radius: 5px;
+}
+.contact-link {color: #141A28;}
+
+.map {
+    margin: 20px 0;
 }
