--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -31,8 +31,13 @@ html, body {
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    background-color: #E9F3FE;
+    background-color: #E9F3FE; 
+    background-image: url('./img/background.png'); 
+    background-size: cover; 
+    background-position: center;
+    background-attachment: fixed; 
 }
+
 
 header {
     width: 100%;
