--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -31,18 +31,12 @@ html, body {
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    background-color: #E9F3FE; 
-    background-image: url('./img/background.PNG');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-color: #E9F3FE;
 }
-
-
 
 header {
     width: 100%;
-    background-color: #141A28;
+    background-image: linear-gradient(to right bottom, rgb(0, 0, 0), #303046, #7ca39c, #303046, #000000);
 }
 
 .branch, .branch img {
@@ -59,7 +53,7 @@ header {
     display: block;
     margin: 10px;
     padding: 10px;
-    color: #E9F3FE;
+    color: #ffffff;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: .15em;
@@ -74,33 +68,33 @@ main {width: 100%;}
 .super-card {
     width: 100%;
     display: flex;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .super-card-img, 
 .super-card-img img {
     width: 800px;
-    border-radius: 50%;
+    border-radius: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.super-card-img h2 {margin-top: 20px;}
+.super-card-img h2 {margin-top: 100px;}
 
-.super-card-text {margin-left: 40px;}
+.super-card-text {margin-left: 60px;}
 
 .super-card-text p + p {margin-top: 1em;}
 
 
 .card {
-    max-width: 350px;
+    max-width: 450px;
     min-height: 500px;
     border-radius: 3px;
     margin: 1em;
-    background-color: #FFF;
-    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, .15);
+    background-color: #87879f;
+    box-shadow: 5px 5px 5px 0px rgba(103, 103, 103, 0.15);
     transition: all .3s ease-in-out;
     display: flex;
     flex-direction: column;
@@ -121,7 +115,7 @@ main {width: 100%;}
 
 .card-body { padding: 1em; }
 .card-body p {
-    color: #343A40;
+    color: #000000;
     line-height: 1.4em;
 }
 
@@ -142,8 +136,8 @@ main {width: 100%;}
     padding: 1em;
     border: none;
     border-radius: 3px;
-    background-image: linear-gradient(to right bottom, #412e82, #393581, #333b7e, #2f407a, #2f4475);
-    color: #E9F3FE;
+    background-image: linear-gradient(to right bottom, #4c1313, #bd0404, #e12525, #7f1717, #000000);
+    color: #f6ff00;
     font-size: 1.2em;
     text-transform: capitalize;
     transition: all .3s ease-in-out;
