--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -26,12 +26,15 @@ h2 {color: #141A28;}
 html, body {
     width: 100%;
     height: 100%;
+    
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     background-color: #E9F3FE;
+    background: url('./fundo.PNG') center/cover no-repeat;
+
 }
 
 header {
@@ -63,10 +66,10 @@ header {
 .menu .menu-link:hover {opacity: .75;}
 
 
-main {width: 100%;}
+main {width: 80%;}
 
 .super-card {
-    width: 100%;
+    width: 85%;
     display: flex;
     margin-top: 30px;
 }
@@ -81,7 +84,7 @@ main {width: 100%;}
     align-items: center;
 }
 
-.super-card-img h2 {margin-top: 100px;}
+.super-card-img h2 {margin-top: 20px;}
 
 .super-card-text {margin-left: 60px;}
 
@@ -93,7 +96,7 @@ main {width: 100%;}
     min-height: 500px;
     border-radius: 3px;
     margin: 1em;
-    background-color: #87879f;
+    background-color: #ffffff;
     box-shadow: 5px 5px 5px 0px rgba(103, 103, 103, 0.15);
     transition: all .3s ease-in-out;
     display: flex;
