--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -10,9 +10,9 @@ a {color: #FFF;}
 
 img{max-width: 100%;}
 
-p {font-size: 1.2em; line-height: 1.4em; color: #141A28;}
+p {font-size: 1.2em; line-height: 1.4em; color: #ffffff;}
 
-h2 {color: #141A28;}
+h2 {color: #ffffff;}
 
 .container {
     width: 960px;
@@ -164,7 +164,7 @@ main {width: 80%;}
     background-color: #141A28;
     border-radius: 5px;
 }
-.contact-link {color: #141A28;}
+.contact-link {color: #ffffff;}
 
 .map {
     margin: 20px 0;
