--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -33,7 +33,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     background-color: #E9F3FE;
-    background: url('./fundo.jpg') center/cover no-repeat;
+    background: url('./fundo.jpg');
 
 }
 
