--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -33,9 +33,10 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     background-color: #E9F3FE;
-    background: url('./fundo.jpg');
-
+    background: url('./fundo.jpg') no-repeat center center fixed;
+    background-size: cover;
 }
+
 
 header {
     width: 100%;
